<resources>
    <string name="next_app_name">NeXt</string>
    <string name="event_issuer_placeholder">Issued by %1$s</string>
    <string name="event_title">[Event Title]</string>
    <string name="event_slots_left_placeholder">%1$d / %2$d slots left</string>
    <string name="events">Events</string>
    <string name="my_requests">My Requests</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="login_caps">LOGIN</string>
    <string name="home">Home</string>
    <string name="event_name">Event Name</string>
    <string name="location">Location</string>
    <string name="participants">Participants</string>
    <string name="logout">logout</string>
    <string name="create_event">Create Event</string>
    <string name="event_date">Event Date</string>
    <string name="back">back</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="add_button">Add</string>
    <string name="blue_floating_action_button">blue add</string>
    <string name="the_last_step">The last step:</string>
    <string name="notes">Notes</string>
    <string name="event_detail">Event Details</string>
    <string name="count_participated_placeholder">%1$d participated</string>
    <string name="needed_participants_placeholder">Needed\t\t: %1$d participants</string>
    <string name="reward_placeholder">Reward\t\t: %1$s</string>
    <string name="location_placeholder">Location\t: %1$s</string>
    <string name="date_placeholder">Date\t\t\t\t: %1$s</string>
    <string name="notes_placeholder">Notes\t\t\t: %1$s</string>
    <string name="banner_event_image">Banner Event Image</string>
    <string name="active_placeholder">%1$s</string>
    <string name="event_notes">Event Notes</string>
    <string name="event_notes_placeholder">%1$s</string>
    <string name="next_button">next</string>
    <string name="participate">Participate +</string>
    <string name="reward_ex_1_involvement">Reward (ex. 1 involvement)</string>
    <string name="close_event">Close Event</string>
    <string name="initial_placeholder">No Username</string>
    <string name="name_placeholder">No Name</string>
    <string name="email_placeholder">No Email</string>
    <string name="remove">remove</string>
    <string name="delete_event">Delete event</string>
    <string name="profile">Profile</string>
    <string name="position_placeholder">No Position</string>
    <string name="leader">Leader :</string>
    <string name="page_name">Page Name</string>
    <string name="requests">Requests</string>
    <string name="request_type">[Request Type]</string>
    <string name="tuesday_10_october_2023">Tuesday, 10 October 2023</string>
    <string name="event_description">[Event Description]</string>
    <string name="create_request">Create Request</string>
    <string name="select_your_permission_type">Select your permission type</string>
    <string name="create_extra_class">Create Extra Class</string>
    <string name="choose_partner">Choose Partner</string>
    <string name="choose_course_code">Choose Course Code</string>
    <string name="shift">Shift</string>
    <string name="class_code">Class Code</string>
    <string name="student_count">Student Count</string>
    <string name="request_permission">Request Permission</string>
    <string name="permission_type">Permission Type</string>
    <string name="reason">Reason</string>
    <string name="on_progress_tasks">On Progress Tasks</string>
    <string name="submit">Submit</string>
    <string name="insert_banner_image">Insert Banner Image</string>
    <string name="request_date">Request Date</string>
    <string name="password">Password</string>
    <string name="logo">logo</string>
    <string name="no_items_available_yet_start_creating_new_ones">No items available yet. Start creating new ones!</string>
    <string name="camera">camera</string>
    <string name="choose_class_transaction">Choose Class Transaction</string>
    <string-array name="request_type_array">
        <item name="default">Select Permission Type</item>
        <item name="permission">Permission</item>
        <item name="extra_class">Extra Class</item>
    </string-array>
</resources>