<?xml version="1.0" encoding="utf-8"?>

<!--    Navigation Bar -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:elevation="10dp"
    android:background="@color/black_blue_navbar"
    android:gravity="center_vertical">

    <ImageView
        android:id="@+id/logoutButton"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="30dp"
        android:contentDescription="@string/logout"
        android:src="@drawable/logout_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/PageTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/page_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <edu.bluejack23_1.next.components.UserThumbnailImageView
        android:id="@+id/profileButton"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginRight="30dp"
        android:contentDescription="@string/profile_picture"
        android:scaleType="centerCrop"
        android:src="@drawable/user_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>