<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ProfileActivity">
    
    <!-- Navigation Bar -->
    <LinearLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/black_blue_navbar"
        android:gravity="center_vertical"
        android:translationZ="2dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="28dp"
            android:contentDescription="@string/back"
            android:src="@drawable/baseline_arrow_back_24" />

        <TextView
            android:id="@+id/PageTV"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:paddingHorizontal="30dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/topBar">

        <edu.bluejack23_1.next.components.UserThumbnailImageView
            android:id="@+id/profilePicture"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/user_login_icon"
            android:scaleType="centerCrop" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/nameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:text="@string/name_placeholder"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/usernameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:text="@string/initial_placeholder"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/emailTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:text="@string/email_placeholder"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />


        <TextView
            android:id="@+id/leaderTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:text="@string/leader"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="20dp"
            android:gravity="center_vertical">

            <edu.bluejack23_1.next.components.UserThumbnailImageView
                android:id="@+id/leaderProfilePicture"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/user_login_icon"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingHorizontal="16dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/leaderUsernameTV"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/initial_placeholder"
                    android:fontFamily="@font/lato"
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/leaderNameTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_placeholder"
                    android:fontFamily="@font/lato"
                    android:textSize="16sp"/>
                <TextView
                    android:id="@+id/leaderEmailTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_placeholder"
                    android:fontFamily="@font/lato"
                    android:textSize="14sp"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>