<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_blue_navbar"
    android:backgroundTint="@color/black_blue_navbar"
    tools:context=".views.auth.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/loginIV"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:background="@drawable/white_rounded"
            android:contentDescription="@string/logo"
            android:src="@drawable/jd_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/usernameET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:autofillHints="username"
            android:background="@drawable/white_rounded"
            android:drawableStart="@drawable/user_login_icon"

            android:drawablePadding="10dp"
            android:ems="13"
            android:hint="@string/username"
            android:inputType="text"
            android:paddingHorizontal="18dp"
            android:paddingVertical="18dp"
            android:textColor="@color/black"

            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginIV"
            tools:layout_editor_absoluteY="280dp" />

        <EditText
            android:id="@+id/passwordET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="24dp"
            android:autofillHints="password"

            android:background="@drawable/white_rounded"
            android:drawableStart="@drawable/password_login_icon"
            android:drawablePadding="10dp"
            android:ems="13"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingHorizontal="18dp"
            android:paddingVertical="18dp"

            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usernameET" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:background="@drawable/elevated_purple_rounded"
            android:backgroundTint="@color/black_blue_navbar"
            android:elevation="10dp"
            android:paddingHorizontal="50dp"
            android:paddingVertical="10dp"
            android:text="@string/login_caps"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordET" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    
</androidx.constraintlayout.widget.ConstraintLayout>