<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="edu.bluejack23_1.next.viewmodels.events.CreateEventDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_blue_bg"
        tools:context=".views.events.create.CreateEventDetailActivity">


        <ProgressBar
            android:id="@+id/progress_bar_create_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:translationZ="20dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:manageState="@{viewModel.showProgressBar}" />

        <!--    Navigation Bar-->
        <edu.bluejack23_1.next.components.CompleteTopBar
            android:id="@+id/topBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:translationZ="2dp"
            app:layout_constraintTop_toTopOf="parent"
            app:pageTitle="@string/create_event" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="60dp"
            android:alpha="0"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topBar"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/headerTV1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/the_last_step"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/headerTV2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@{viewModel.validationState.event.title.toString()}"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/pageHeaderTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@{viewModel.validationState.event.date.toString()}"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="30dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/notes"
                    android:textColorHint="#FFFFFF"
                    app:boxBackgroundColor="@color/black_blue_bg"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxStrokeColor="@color/border_color"
                    app:hintTextColor="@color/border_color">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/eventNotesET"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:gravity="top"
                        android:textColor="@color/border_color"
                        android:textColorHint="@color/border_color" />
                </com.google.android.material.textfield.TextInputLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/imageField"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/white_rounded_dashed">

                    <ImageView
                        android:id="@+id/bannerImageIV"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/white_rounded"
                        android:contentDescription="@string/camera"
                        android:scaleType="centerCrop"
                        android:src="@drawable/jd_logo"
                        android:translationZ="1dp"
                        android:visibility="gone" />

                    <ImageButton
                        android:id="@+id/clearImageInput"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="1dp"
                        android:clickable="false"
                        android:contentDescription="@string/remove"
                        android:focusable="false"
                        android:src="@drawable/baseline_delete_24"
                        android:translationZ="1dp"
                        android:visibility="gone"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:text="@string/insert_banner_image"
                        android:textSize="14sp"
                        app:drawableTopCompat="@drawable/baseline_camera_alt_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>


            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/buttonSet"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:alpha="1"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/backBtn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/white_rounded"
                        android:backgroundTint="@color/white"
                        android:text="@string/back"
                        android:textColor="@color/black" />

                    <Space
                        android:layout_width="8dp"
                        android:layout_height="1dp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/nextBtn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@{viewModel.showProgressBar ? @drawable/grey_rounded : @drawable/white_rounded}"
                        android:backgroundTint="@color/green"
                        android:enabled="@{!viewModel.showProgressBar}"
                        android:text="@string/next_app_name"
                        android:textColor="@color/white" />
                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
