<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="edu.bluejack23_1.next.viewmodels.requests.RequestHomeViewModel" />

        <variable
            name="adapter"
            type="edu.bluejack23_1.next.model.recyclerView.adapter.RequestRVAdapter" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_white"
        tools:context=".views.requests.RequestHomeActivity">

        <ProgressBar
            android:id="@+id/progress_bar_movies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:manageState="@{viewModel.showProgressBar}" />


        <!--    Navigation Bar -->
        <edu.bluejack23_1.next.components.CompleteTopBar
            android:id="@+id/topBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:translationZ="2dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:pageTitle="@string/home" />


        <LinearLayout
            android:id="@+id/pageHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/topBar">

            <TextView
                android:id="@+id/pageHeaderTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/lato_bold"
                android:text="@string/my_requests"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="20dp" />

            <!--            <ImageView-->
            <!--                android:layout_width="44dp"-->
            <!--                android:layout_height="44dp"-->
            <!--                android:src="@drawable/baseline_sort_24" />-->
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/requestRV"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@id/bottomBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pageHeader"
            app:setAdapter="@{adapter}"
            app:submitList="@{viewModel.requestList}"
            tools:listitem="@layout/event_item" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/emptyView"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toBottomOf="@+id/pageHeader"
            >

            <include
                layout="@layout/no_request_event_yet_layout"
                android:layout_width="250dp"
                android:layout_height="wrap_content" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottomBar"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            app:layout_constraintBottom_toBottomOf="parent">


            <TextView
                android:id="@+id/eventButton"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="60dp"
                android:text="@string/events"
                app:drawableTopCompat="@drawable/event_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/requestButton"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginEnd="60dp"
                android:text="@string/requests"
                android:textColor="@color/dark_purple"
                app:drawableTint="@color/dark_purple"
                app:drawableTopCompat="@drawable/request_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/invisible_circle"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/circle"
            android:backgroundTint="@color/black_blue_bg"
            android:translationZ="1dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/frameLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="45sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/addButton"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:backgroundTint="@color/black_blue_bg"
                android:contentDescription="@string/blue_floating_action_button"
                android:tint="@color/white" />


            <ImageView
                android:id="@+id/add_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:contentDescription="@string/add_button"
                android:src="@drawable/add_icon" />


        </FrameLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>